--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -16,6 +16,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <!-- Film Poster ImageView -->
             <ImageView
                 android:id="@+id/filmPic"
                 android:layout_width="0dp"
@@ -26,6 +27,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 tools:srcCompat="@tools:sample/avatars" />
 
+            <!-- Back Button -->
             <ImageView
                 android:id="@+id/backBtn"
                 android:layout_width="wrap_content"
@@ -36,8 +38,9 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/back_dark" />
 
-            <eightbitlab.com.blurview.BlurView
-                android:id="@+id/blurView"
+            <!-- Blur View for background -->
+            <FrameLayout
+                android:id="@+id/blurContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
@@ -56,6 +59,7 @@
                     android:paddingEnd="16dp"
                     android:paddingBottom="32dp">
 
+                    <!-- Title and IMDB -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -86,6 +90,7 @@
                             app:srcCompat="@drawable/bookmark" />
                     </LinearLayout>
 
+                    <!-- Genre RecyclerView -->
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/genreView"
                         android:layout_width="match_parent"
@@ -93,6 +98,7 @@
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp" />
 
+                    <!-- Divider Line -->
                     <View
                         android:id="@+id/view"
                         android:layout_width="match_parent"
@@ -101,6 +107,7 @@
                         android:layout_marginBottom="8dp"
                         android:background="@drawable/gradient_bg" />
 
+                    <!-- Movie Details -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -122,6 +129,7 @@
                             android:textColor="@color/white" />
                     </LinearLayout>
 
+                    <!-- Movie Summary -->
                     <TextView
                         android:id="@+id/textView10"
                         android:layout_width="match_parent"
@@ -138,6 +146,7 @@
                         android:text="test"
                         android:textColor="@color/white" />
 
+                    <!-- Cast Section -->
                     <TextView
                         android:id="@+id/textView9"
                         android:layout_width="match_parent"
@@ -154,8 +163,9 @@
                         android:paddingStart="8dp"
                         android:paddingEnd="8dp" />
                 </LinearLayout>
-            </eightbitlab.com.blurview.BlurView>
+            </FrameLayout>
 
+            <!-- Buy Ticket Button -->
             <androidx.appcompat.widget.AppCompatButton
                 style="@android:style/Widget.Button"
                 android:background="@drawable/orange_bg"
@@ -167,8 +177,8 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/blurView"
-                app:layout_constraintStart_toStartOf="@+id/blurView"
+                app:layout_constraintEnd_toEndOf="@+id/blurContainer"
+                app:layout_constraintStart_toStartOf="@+id/blurContainer"
                 app:layout_constraintTop_toBottomOf="@+id/filmPic" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
