--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -21,7 +21,7 @@
     <item
         android:id="@+id/profile"
         android:icon="@drawable/btn_4"
-        android:title="Explorer"
+        android:title="Profile"
         app:cnb_backgroundColor="@color/orange"
         app:cnb_iconColor="@color/white"/>
 
