--- a/app/src/main/res/layout/activity_film_detail.xml
+++ b/app/src/main/res/layout/activity_film_detail.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -38,132 +37,121 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/back_dark" />
 
-            <!-- Blur View for background -->
-            <FrameLayout
-                android:id="@+id/blurContainer"
+            <!-- Content Below Film Poster -->
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="24dp"
-                app:blurOverlayColor="#90000000"
-                app:layout_constraintBottom_toBottomOf="@+id/filmPic"
-                app:layout_constraintTop_toBottomOf="@+id/filmPic"
-                tools:layout_editor_absoluteX="24dp"
-                tools:ignore="MissingClass">
+                android:orientation="vertical"
+                android:paddingStart="16dp"
+                android:paddingTop="16dp"
+                android:paddingEnd="16dp"
+                android:paddingBottom="32dp"
+                app:layout_constraintTop_toBottomOf="@id/filmPic">
 
+                <!-- Title and IMDB -->
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:paddingStart="16dp"
-                    android:paddingTop="16dp"
-                    android:paddingEnd="16dp"
-                    android:paddingBottom="32dp">
+                    android:orientation="horizontal">
 
-                    <!-- Title and IMDB -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/titleTxt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Title"
-                            android:textColor="@color/white"
-                            android:textSize="30sp"
-                            android:textStyle="bold" />
-
-                        <ImageView
-                            android:id="@+id/imageView5"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            app:srcCompat="@drawable/share" />
-
-                        <ImageView
-                            android:id="@+id/imageView3"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center_vertical"
-                            app:srcCompat="@drawable/bookmark" />
-                    </LinearLayout>
-
-                    <!-- Genre RecyclerView -->
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/genreView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:paddingStart="8dp"
-                        android:paddingEnd="8dp" />
-
-                    <!-- Divider Line -->
-                    <View
-                        android:id="@+id/view"
-                        android:layout_width="match_parent"
-                        android:layout_height="2dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginBottom="8dp"
-                        android:background="@drawable/gradient_bg" />
-
-                    <!-- Movie Details -->
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:id="@+id/movieTimeTxt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Year"
-                            android:textColor="@color/white" />
-
-                        <TextView
-                            android:id="@+id/imdbTxt"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="IMDB"
-                            android:textColor="@color/white" />
-                    </LinearLayout>
-
-                    <!-- Movie Summary -->
                     <TextView
-                        android:id="@+id/textView10"
-                        android:layout_width="match_parent"
+                        android:id="@+id/titleTxt"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="Summary"
+                        android:layout_weight="1"
+                        android:text="Title"
                         android:textColor="@color/white"
+                        android:textSize="30sp"
                         android:textStyle="bold" />
 
-                    <TextView
-                        android:id="@+id/movieSummaryTxt"
-                        android:layout_width="match_parent"
+                    <ImageView
+                        android:id="@+id/imageView5"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="test"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/share" />
+
+                    <ImageView
+                        android:id="@+id/imageView3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        app:srcCompat="@drawable/bookmark" />
+                </LinearLayout>
+
+                <!-- Genre RecyclerView -->
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/genreView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp" />
+
+                <!-- Divider Line -->
+                <View
+                    android:id="@+id/view"
+                    android:layout_width="match_parent"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginBottom="8dp"
+                    android:background="@drawable/gradient_bg" />
+
+                <!-- Movie Details -->
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/movieTimeTxt"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Year"
                         android:textColor="@color/white" />
 
-                    <!-- Cast Section -->
                     <TextView
-                        android:id="@+id/textView9"
-                        android:layout_width="match_parent"
+                        android:id="@+id/imdbTxt"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="16dp"
-                        android:text="Cast"
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-
-                    <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/castListView"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:paddingStart="8dp"
-                        android:paddingEnd="8dp" />
+                        android:text="IMDB"
+                        android:textColor="@color/white" />
                 </LinearLayout>
-            </FrameLayout>
+
+                <!-- Movie Summary -->
+                <TextView
+                    android:id="@+id/textView10"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    android:text="Summary"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/movieSummaryTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="test"
+                    android:textColor="@color/white" />
+
+                <!-- Cast Section -->
+                <TextView
+                    android:id="@+id/textView9"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:text="Cast"
+                    android:textColor="@color/white"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/castListView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:paddingStart="8dp"
+                    android:paddingEnd="8dp" />
+            </LinearLayout>
 
             <!-- Buy Ticket Button -->
             <androidx.appcompat.widget.AppCompatButton
@@ -177,9 +165,9 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/blurContainer"
-                app:layout_constraintStart_toStartOf="@+id/blurContainer"
-                app:layout_constraintTop_toBottomOf="@+id/filmPic" />
+                app:layout_constraintEnd_toEndOf="@id/filmPic"
+                app:layout_constraintStart_toStartOf="@id/filmPic"
+                app:layout_constraintTop_toBottomOf="@id/filmPic" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
